apps/kubernetes-dashboard/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`dashboard.wcrpc.lan`)
    services:
    - name: kubernetes-dashboard
      port: 443
      scheme: https
      serversTransport: dashboard-transport
  tls:
    secretName: wcrpc-tls
